Modify workflow to install Visual Studio Build Tools
Updated the GitHub Actions workflow to install Visual Studio Build Tools instead of locating an existing installation.

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -12,12 +12,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Locate Visual Studio and setup x64 environment
+      - name: Install Visual Studio Build Tools
         shell: cmd
         run: |
-          for /f "usebackq delims=" %%I in (`"%ProgramFiles(x86)%\Microsoft Visual Studio\Installer\vswhere.exe" -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -property installationPath`) do set "VSROOT=%%I"
-          if not defined VSROOT exit /b 1
-          call "%VSROOT%\VC\Auxiliary\Build\vcvarsall.bat" x64
+          curl -Lo vs_BuildTools.exe https://aka.ms/vs/17/release/vs_BuildTools.exe
+          vs_BuildTools.exe --quiet --wait --norestart --nocache --installPath C:\BuildTools --add Microsoft.VisualStudio.Workload.VCTools --add Microsoft.VisualStudio.Component.Windows10SDK.19041.x64 --includeRecommended
+
+      - name: Setup x64 build environment
+        shell: cmd
+        run: |
+          call "C:\BuildTools\VC\Auxiliary\Build\vcvars64.bat"
           if errorlevel 1 exit /b 1
 
       - name: Validate source file
